[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/bat_angry.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/Boss/World_Boss_Giant_Bat.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 10.0499

[sub_resource type="Animation" id=2]
resource_name = "Boss_Giant_Bat_Normal"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="World_Boss_Giant_Bat" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Boss_Giant_Bat_Normal"
anims/Boss_Giant_Bat_Normal = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Attack_Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="Idle_Timer" type="Timer" parent="."]

[node name="Positions" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Positions"]
position = Vector2( -151, 145 )

[node name="Position2D5" type="Position2D" parent="Positions"]
position = Vector2( 283, -9 )

[node name="Position2D9" type="Position2D" parent="Positions"]
position = Vector2( 0, 24 )

[node name="Position2D10" type="Position2D" parent="Positions"]
position = Vector2( 0, -34 )

[node name="Position2D11" type="Position2D" parent="Positions"]
position = Vector2( 45, -3 )

[node name="Position2D13" type="Position2D" parent="Positions"]
position = Vector2( 119, -3 )

[node name="Position2D14" type="Position2D" parent="Positions"]
position = Vector2( 50, -75 )

[node name="Position2D15" type="Position2D" parent="Positions"]
position = Vector2( -75, 67 )

[node name="Position2D16" type="Position2D" parent="Positions"]
position = Vector2( 91, 112 )

[node name="Position2D17" type="Position2D" parent="Positions"]
position = Vector2( -60, -52 )

[node name="Position2D12" type="Position2D" parent="Positions"]
position = Vector2( -48, 1 )

[node name="Position2D6" type="Position2D" parent="Positions"]
position = Vector2( -17, 208 )

[node name="Position2D7" type="Position2D" parent="Positions"]
position = Vector2( 34, -150 )

[node name="Position2D2" type="Position2D" parent="Positions"]
position = Vector2( -184, 19 )

[node name="Position2D8" type="Position2D" parent="Positions"]
position = Vector2( 218, -122 )

[node name="Position2D3" type="Position2D" parent="Positions"]
position = Vector2( 224, 210 )

[node name="Position2D4" type="Position2D" parent="Positions"]
position = Vector2( -133, -109 )

[connection signal="timeout" from="Attack_Timer" to="." method="_on_Attack_Timer_timeout"]
[connection signal="timeout" from="Idle_Timer" to="." method="_on_Idle_Timer_timeout"]
